<resources>
    <string name="app_name">Pink Palace Museum</string>

    <!-- Activities -->
    <string name="action_gallery">Speed Gallery</string>
    <string name="activity_feed">Feed</string>
    <string name="activity_donate">Donate</string>
    <string name="activity_Contact">Contact</string>

    <!-- Fragments -->
    <string name="activity_exhibits">Exhibits</string>
    <string name="activity_map">Map</string>
    <string name="action_login">Login</string>
    <string name="action_join">Join</string>
    <string name="activity_profile">Member Profile</string>

    <!-- Tab Labels -->
    <string name="tab1">Exhibits</string>
    <string name="tab2">Map</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_gallery">Speed Gallery</string>
    <string name="nav_feed">Feed</string>
    <string name="nav_membership">Membership</string>
    <string name="nav_login">Login</string>
    <string name="nav_join">Join</string>
    <string name="nav_contact">Contact Us</string>
    <string name="nav_donate">Donate</string>
    <string name="nav_about">About</string>
    <string name="donation_information_LBL">Donation Information</string>
    <string name="donation_desc">Thank you for making this tangible gift in support of our mission. We appreciate you!</string>
    <string name="pink_palace_name">pink palace name</string>
    <string name="flag">flag</string>
    <string name="item_desc">Item Description</string>
    <string name="item_title">Exhibit Title</string>
    <string name="detail_image">Detail Image</string>
    <string name="username">username</string>
    <string name="tweet_text">Tweet Text</string>
    <string name="profile_pic_desc">profile picture</string>
    <string name="twitter_username">memphismuseums</string>
    <string name="no_tweets">No Tweets</string>
    <string name="donate_text">Donate</string>
    <string name="donate_amount">$0.00</string>
    <string name="card_name_field">Name on Card</string>
    <string name="donation_amount_LBL">Donation Amount:</string>
    <string name="or_separator">OR</string>
    <string name="card_number_field">Card Number</string>
    <string name="expiry_date_field">Expiry Date</string>
    <string name="cvv_field">CVV</string>
    <string name="donation_LBL">Donation</string>
    <string name="contact_information">Contact Information</string>
    <string name="contact_us">Contact Us</string>
    <string name="pink_palace_museum">Pink Palace Museum</string>
    <string name="_3050_central_ave">Musem_Address</string>
    <string name="memphis_tn_38111">City_zip</string>
    <string name="website_url">www.memphismuseums.org</string>
    <string name="phone_number">901.636.2362</string>
    <string name="hours">HOURS</string>
    <string name="general_information">General Information</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday_friday">Monday - Saturday</string>
    <string name="hours_range">9am - 5 pm</string>
    <string name="hours_weekend">12pm - 5 pm</string>
    <string name="copy">OPERATED BY THE CITY OF MEMPHIS DIVISION OF PARKS AND NEIGHBORHOODS, AND MEMPHIS MUSEUMS, INC.</string>
    <string name="holidays">The Pink Palace is closed to the public on Thanksgiving Day, Christmas Day, and New Years Day  </string>
    <string name="join">Join  </string>
    <string name="joinFamily">Join The Pink Palace Family of Museums  </string>
    <string name="first_name">First Name </string>
    <string name="last_name">Last Name </string>
    <string name="email_address">Email Address </string>
    <string name="password">Password </string>
    <string name="confirm_password">Confirm Password </string>
    <string name="not_a_member">Not a member? Sign up </string>
</resources>
