<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/nav_gallery" />
        <item
            android:id="@+id/nav_feed"
            android:title="@string/nav_feed" />
        <item android:title="@string/nav_membership">
            <menu>
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/nav_login" />
                <item
                    android:id="@+id/nav_join"
                    android:title="@string/nav_join" />
            </menu>
        </item>
        <item android:title="@string/nav_about">
            <menu>
                <item
                    android:id="@+id/nav_contact"
                    android:title="@string/nav_contact" />
                <item
                    android:id="@+id/nav_donate"
                    android:title="@string/nav_donate" />
            </menu>
        </item>
    </group>
</menu>