<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.AppBarLayout

        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            app:titleTextColor="#FFF" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="62dp"
            android:paddingEnd="@dimen/text_padding"
            android:paddingStart="@dimen/text_padding"
            android:text="@string/join"
            android:textSize="@dimen/title_size" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="84dp"
            android:text="@string/joinFamily"
            android:textAlignment="center"
            android:textSize="@dimen/desc_size"
            tools:layout_margin="@dimen/text_padding" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/textView4"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType=""
            android:text="@string/first_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="177.11sp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:inputType=""
            android:text="@string/last_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="130.11dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType=""
            android:text="@string/email_address"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="130.11dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="14dp"
            android:inputType=""
            android:text="@string/password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="130.11dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText4"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="19dp"
            android:inputType=""
            android:text="@string/confirm_password"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText6"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="21dp"
            android:background="@color/colorPrimary"
            android:text="next"
            android:textColor="@color/white" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>