<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout

        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            app:titleTextColor="#FFF" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="568dp">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="385dp"
            android:layout_height="58dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="74dp"
            android:width="478.5dp"
            android:height="65dp"
            android:text="@string/contact_information"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.181"
            tools:layout_editor_absoluteX="0dp"
            tools:padding="16dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="220dp"
            android:layout_height="52dp"
            android:layout_alignBaseline="@+id/textView26"
            android:layout_alignBottom="@+id/textView26"
            android:layout_alignStart="@+id/textView30"
            android:width="478.5dp"
            android:height="65dp"
            android:text="@string/hours"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.248"
            tools:padding="16dp" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="219dp"
            android:layout_height="54dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/textView6"
            android:layout_marginRight="16dp"
            android:width="478.5dp"
            android:height="65dp"
            android:text="@string/monday_friday"
            android:textAlignment="textEnd"
            android:textColor="@color/cardview_dark_background"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.293"
            tools:padding="16dp" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="155dp"
            android:layout_height="51dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView23"
            android:layout_marginLeft="16dp"
            android:width="478.5dp"
            android:height="65dp"
            android:text="@string/pink_palace_museum"
            android:textColor="@color/cardview_dark_background"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="144dp"
            tools:padding="16dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="159dp"
            android:layout_height="47dp"
            android:layout_alignStart="@+id/textView26"
            android:layout_below="@+id/textView23"
            android:layout_marginTop="16dp"
            android:width="478.5dp"
            android:height="65dp"
            android:text="@string/_3050_central_ave"
            android:textAlignment="textStart"
            android:textColor="@color/cardview_dark_background"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="165dp"
            tools:padding="16dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="159dp"
            android:layout_height="60dp"
            android:layout_alignStart="@+id/textView26"
            android:layout_alignTop="@+id/textView10"
            android:width="478.5dp"
            android:height="65dp"
            android:text="@string/memphis_tn_38111"
            android:textColor="@color/cardview_dark_background"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="180dp"
            tools:padding="16dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="334dp"
            android:layout_height="58dp"
            android:layout_above="@+id/textView35"
            android:layout_centerHorizontal="true"
            android:width="478.5dp"
            android:height="65dp"
            android:paddingTop="24dp"
            android:text="@string/website_url"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.921"
            tools:padding="16dp" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="202dp"
            android:layout_height="57dp"
            android:layout_alignStart="@+id/textView34"
            android:layout_alignTop="@+id/textView34"
            android:layout_marginTop="23dp"
            android:width="478.5dp"
            android:height="65dp"
            android:text="@string/phone_number"
            android:textColor="@color/cardview_dark_background"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.524"
            tools:padding="16dp" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="202dp"
            android:layout_height="60dp"
            android:layout_alignStart="@+id/textView9"
            android:layout_below="@+id/textView30"
            android:width="478.5dp"
            android:height="65dp"
            android:text="@string/general_information"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.471"
            tools:padding="16dp" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="219dp"
            android:layout_height="57dp"
            android:layout_alignBottom="@+id/textView34"
            android:layout_alignStart="@+id/textView32"
            android:width="478.5dp"
            android:height="65dp"
            android:text="@string/sunday"
            android:textAlignment="textEnd"
            android:textColor="@color/cardview_dark_background"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.469"
            tools:padding="16dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="219dp"
            android:layout_height="57dp"
            android:layout_alignEnd="@+id/textView14"
            android:layout_alignTop="@+id/textView6"
            android:layout_marginTop="16dp"
            android:width="478.5dp"
            android:height="65dp"
            android:text="@string/hours_range"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.322"
            tools:padding="16dp" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="219dp"
            android:layout_height="62dp"
            android:layout_alignBottom="@+id/textView33"
            android:layout_alignStart="@+id/textView10"
            android:width="478.5dp"
            android:height="65dp"
            android:text="@string/hours_weekend"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:padding="16dp" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="379dp"
            android:layout_height="54dp"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/imageButton"
            android:layout_marginBottom="12dp"
            android:width="478.5dp"
            android:height="65dp"
            android:text="@string/copy"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:padding="16dp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="379dp"
            android:layout_height="136dp"
            android:layout_below="@+id/textView33"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp"
            app:srcCompat="@drawable/pinkpal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="322dp" />

    </RelativeLayout>



</android.support.design.widget.CoordinatorLayout>
